[package]
name = "macroquad_ldtk"
version = "1.0.1"
edition = "2021"
authors = ["siliconcritters <meow@silicat.dev>"]
description = "LDtk integration with macroquad"
license = "MIT OR Apache-2.0"
repository = "https://github.com/siliconcritters/macroquad_ldtk"
readme = "README.md"
categories = ["game-development"]
keywords = ["ldtk", "gamedev", "level", "editor", "macroquad"]
exclude = ["assets/*"]

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
